fix: portfolio section's height on mobile mode

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -293,6 +293,14 @@ body .title-custom {
   border-top-right-radius: 20px;
 }
 
+#projects {
+  height: 100%;
+}
+@media (min-width: 720px) {
+  #projects {
+    height: 100vh;
+  }
+}
 #projects .content .projects-infos {
   flex-direction: column;
 }
